--- a/resume_klyment_kim.html
+++ b/resume_klyment_kim.html
@@ -119,7 +119,7 @@
 
                         <p>
                             <span class="contact-type">C:</span>
-                            <a href="tg://resolve?domain=https://t.me/Kim_Kliment" class="contact-link">telegram</a></p>
+                            <a href="https://t.me/Kim_Kliment" class="contact-link">telegram</a></p>
                         <p>
                             <span class="contact-type">D:</span>
                             <a href="mailto:kim.kliment.kr@gmail.com" class="contact-link">
