--- a/klyment.kim.html
+++ b/klyment.kim.html
@@ -113,16 +113,20 @@
                     <h3 class="sidebar-title">Contacts</h3>
                     <div>
                         <p>
+                            <a href="tel:+380983143284" class="contact-link">
                             <span class="contact-type"><img src="img/icon_phone.png" alt="phone" class="icon-style"></span>
-                            <a href="tel:+380983143284" class="contact-link">+38(098)-314-32-84</a>
+                                +38(098)-314-32-84</a>
                         </p>
 
                         <p>
+                           <a href="https://t.me/Kim_Kliment" target="newframe" class="contact-link">
                             <span class="contact-type"><img src="img/icon_telega.png" alt="telegram" class="icon-style"></span>
-                            <a href="https://t.me/Kim_Kliment" target="newframe" class="contact-link">telegram</a></p>
+                                telegram</a>
+                        </p>
+
                         <p>
+                          <a href="mailto:kim.kliment.kr@gmail.com" class="contact-link">
                             <span class="contact-type"><img src="img/icon_mail.png" alt="phone" class="icon-style"></span>
-                            <a href="mailto:kim.kliment.kr@gmail.com" class="contact-link">
                                 kim.kliment.kr@gmail.com</a>
                         </p>
                     </div>
