--- a/klyment.kim.html
+++ b/klyment.kim.html
@@ -65,7 +65,7 @@
                     <div class="work">
                         <h3 class="title-about">Work Experience</h3>
                         <!-- Company 1-->
-                         <div>
+                         <div class="company-width">
                              <h4 class="work-position">Front-End Developer <span class="company">Freelance</span></h4>
                              <p class="period">September 2019 - up to now   <span class="line">|</span>   Country</p>
                              <ul class="work-list">
@@ -87,7 +87,7 @@
                             </ul>
                          </div>
                           <!-- Company 3-->
-                          <div>
+                          <div class="company-width">
                             <h4 class="work-position">Manager <span class="company">Mono LLC</span></h4>
                             <p class="period">June 2014 - February 2015   <span class="line">|</span>   Country</p>
                             <ul class="work-list">
